fixing annoying issues with fzf and kakoune - think I'll want these everywhere!

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -28,3 +28,6 @@ set -g mouse on
 
 # kill without confirmation
 bind-key x kill-pane
+
+# attempt to fix slowness escaping insert mode in kakoune when using tmux
+set-option -g escape-time 50
