tmux don't lock into repeat command mode at all, just do the one thing and give me my keyboard back

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -31,3 +31,6 @@ bind-key x kill-pane
 
 # attempt to fix slowness escaping insert mode in kakoune when using tmux
 set-option -g escape-time 50
+
+# let me have my keyboard back after doing a command
+set-option -g repeat-time 0
